--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple blogpost server-side app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -30,6 +31,13 @@
     "url": "https://github.com/fulgonim/thinkful-blogposts/issues"
   },
   "homepage": "https://github.com/fulgonim/thinkful-blogposts#readme",
-  "devDependencies": {},
-  "author": "Max Fulgoni"
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^5.0.0"
+  },
+  "author": "Max Fulgoni",
+  "directories": {
+    "test": "test"
+  }
 }
